忽略的文件

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 /cocos2d
 /OutPut
 /归档.zip
+.idea
+.DS_Store
+/scripts/WebStorm1004_20160322.dmg
+/SDK/TalkingData/TalkingData_lib.zip
+/SDK/TeamTalk/bin
+/SDK/TeamTalk/gen
+/bin
